# Customer-Churn-Prediction-Model

./: README.md  main.py  pyproject.toml  requirements.txt
outputs/metrics/: segment_churn_summary.csv
src/: churn_pipeline.py
